[metadata]
name = commandnotfound
version = 0.4.1
description = A wrapper of command-not-found command for subprocess.run
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/commandnotfound
author = Toshihiro kamiya
author_email = kamiya@mbj.nifty.com
license = Public Domain
classifiers =
    Topic :: System :: System Shells
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    License :: Public Domain
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >= 3.8

